# c-scratch

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: main.yml
demo/: CMakeLists.txt  explode.c  implode.c  index_of.c  parse_int.c  string_length.c  to_lower.c  to_upper.c  words_count.c
github/workflows/: main.yml
src/: CMakeLists.txt  concat.c  end_with.c  explode.c  factorial.c  implode.c  index_of.c  joaat.c  parse_int.c  pow.c  power.c  rc4.c  start-with.c  start_with.c  string_length.c  to_lower.c  to_upper.c  word_count.c  words_count.c  xor.c
src/include/: common.h  concat.h  end_with.h  explode.h  factorial.h  implode.h  index_of.h  joaat.h  parse_int.h  pow.h  power.h  rc4.h  start-with.h  string_length.h  to_lower.h  to_upper.h  word_count.h  words_count.h  xor.h
tests/: CMakeLists.txt  concat.test.cpp  end_with.test.cpp  explode.test.cpp  factorial.test.cpp  implode.test.cpp  index_of.test.cpp  joaat.test.cpp  main.cpp  parse_int.test.cpp  pow.test.cpp  power.test.cpp  rc4.test.cpp  start-with.test.cpp  start_with.test.cpp  string_length.test.cpp  to_lower.test.cpp  to_upper.test.cpp  word_count.test.cpp  words_count.test.cpp  xor.test.cpp
